<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">发客</string>
    <string name="action_settings">设置</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="homepagetext3">按距离排序</string>
    <string name="homepagetext2">全城</string>
    <string name="homepagetext1">按评价排序</string>
    <string name="homepagecity">城市</string>
    <string name="discussiontitle">讨论话题</string>
    <string name="discussiontext1">世界状态</string>
    <string name="discussiontext2">好友状态</string>
    <string name="friendspagetitle">我的好友</string>
    <string name="mypagetitle">我的主页</string>
    <string name="login">登录</string>
    <string name="rememberme">记住我</string>
    <string name="register">免费注册</string>
    <string name="sort_by_continent">按所属省份查看</string>
    <string name="sort_by_name">按首字母顺序查看</string>
    <string name="success">登陆成功！</string>
    <string name="fail">登录失败！</string>
    <string name="currentcity">当前定位城市</string>
    <string name="servicestar">服务评价 ：</string>
    <string name="pricestar">价格评价 ：</string>
    <string name="addup">累计预约</string>
    <string name="distance">距     离</string>
    <string name="barberappraise">评价星级</string>

</resources>
