<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/ll_homepage" >
<TabHost 
    android:id="@+id/homepagetabHost"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">    
 
 <!-- 镶嵌线性布局 -->

<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >    
    
  <RelativeLayout
       android:id="@+id/rl_first_top"
       android:layout_width="fill_parent"
       android:layout_height="50dip"
       android:background="@drawable/bg_actionbar"
       android:gravity="center_vertical"
       android:orientation="horizontal" >

       <LinearLayout
           android:id="@+id/ll_city"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_alignParentLeft="true"
           android:layout_marginLeft="10dp"
           android:orientation="horizontal" >

           <TextView
               android:id="@+id/tv_city"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="1dip"
               android:text="@string/homepagecity"
               android:textColor="#FFFFFFFF"
               android:textSize="18sp" />

           <ImageView
               android:id="@+id/tv_cityimage"
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_gravity="center_vertical"
               android:src="@drawable/ic_arrow_white_down" />
       </LinearLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_centerInParent="true"
           android:layout_gravity="center" >

           <TabWidget
               android:id="@android:id/tabs"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:background="@drawable/recentbox"
               android:gravity="center" >

           </TabWidget>

       </RelativeLayout>

      

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:clickable="true"
           android:focusable="true"
           android:layout_alignParentRight="true"
           android:gravity="center_vertical" >

           <ImageView
               android:id="@+id/homepageresearch"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_marginRight="10dip"
               android:src="@drawable/homepage_search" />

           <ImageView
               android:id="@+id/homepagemap"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_marginRight="10dip"
               android:src="@drawable/homepage_location" />
       </LinearLayout>
   </RelativeLayout>
   <RelativeLayout 
		       android:id="@+id/barberfilter"
		       android:layout_width="fill_parent"
		       android:layout_height="42dp"
		       android:layout_below="@+id/rl_first_top">
             <LinearLayout
		            android:id="@+id/layout_barber"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/text_normal"
		            android:orientation="horizontal" >
        	<TextView
	                android:id="@+id/barber_text1"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext1"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />
            <TextView
	                android:id="@+id/barber_text2"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext2"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />
            <TextView
	                android:id="@+id/barber_text3"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext3"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />
        </LinearLayout>
   </RelativeLayout>
   <RelativeLayout 
		       android:id="@+id/barbershopfilter"
		       android:layout_width="fill_parent"
		       android:layout_height="42dp"
		       android:layout_below="@+id/rl_first_top">
             <LinearLayout
		            android:id="@+id/layout_barbershop"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/text_normal"
		            android:orientation="horizontal" >
        	<TextView
	                android:id="@+id/barbershop_text1"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext1"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />

           

            <TextView
	                android:id="@+id/barbershop_text2"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext2"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />
            <TextView
	                android:id="@+id/barbershop_text3"
	                android:layout_width="wrap_content"
	                android:layout_height="42.0dip"
	                android:layout_weight="1.0"
	                android:background="@drawable/selector_btn_text"
	                android:clickable="true"
	                android:gravity="center"
	                android:text="@string/homepagetext3"
	                android:textColor="#737373"
	                android:textSize="16.0sp" />
        </LinearLayout>
      </RelativeLayout>
	<FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_below="@+id/barberfilter" >
	  
	</FrameLayout>
</RelativeLayout>
</TabHost>
</LinearLayout>