<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
            <LinearLayout
                android:id="@+id/testbarbershop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#fff" >

                <ImageView
                    android:id="@+id/iv_barbershopavatar"
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                     />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.22"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <com.blackswan.fake.view.HandyTextView
                            android:id="@+id/tv_barbershopname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_margin="5dp" />

                       

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <com.blackswan.fake.view.HandyTextView
                            android:id="@+id/tv_barbershopdis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="简介："
                            android:textColor="@color/black3"
                            android:textSize="12sp"
                            android:layout_marginLeft="5dp" />

                        <com.blackswan.fake.view.HandyTextView
                            android:id="@+id/tv_barbershop_discontent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:textSize="12sp"
                            android:singleLine="true"
                            android:textColor="@color/black3" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_servicestar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <com.blackswan.fake.view.HandyTextView
                            android:id="@+id/tv_servicestar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/servicestar"
                            android:textSize="8sp" 
                            android:textColor="@color/black3"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="1dp" />
                        
                            <ImageView
                                android:id="@+id/iv_servicestar"
                                android:layout_width="66dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center"
                                android:src="@drawable/star50"
                                android:layout_marginBottom="2dp" />


				            <com.blackswan.fake.view.HandyTextView
				                android:id="@+id/tv_servicestarcount"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="4.7分"
				                android:layout_marginLeft="10dp" 
				                android:textSize="11sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_pricestar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <com.blackswan.fake.view.HandyTextView
                            android:id="@+id/tv_pricestar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/pricestar"
                            android:textColor="@color/black3"
                            android:textSize="8sp" />

                       <ImageView
                                android:id="@+id/iv_pricestar"
                                android:layout_width="66dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center"
                                android:src="@drawable/star50"
                                android:layout_marginBottom="2dp" />
                        <TextView
                            android:id="@+id/tv_pricestarconut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4.9分"
                            android:layout_marginLeft="10dp" 
                            android:textSize="11sp" />
                       
                    </LinearLayout>
                    <LinearLayout
				                android:layout_width="wrap_content"
				                android:layout_height="match_parent" >

				                <com.blackswan.fake.view.HandyTextView
				                    android:id="@+id/tv_addup"
				                    android:layout_width="wrap_content"
				                    android:layout_height="wrap_content"
				                    android:text="@string/addup" 
				                    android:textSize="8sp"
				                    android:layout_marginLeft="5dp"
				                    android:layout_marginBottom="2dp"
				                    android:layout_gravity="center"/>
				                <com.blackswan.fake.view.HandyTextView
				                android:id="@+id/tv_addupcount"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="132"
				                android:textColor="@color/maincolor"
				                android:textSize="11sp"
				                android:layout_marginBottom="2dp"
				                android:layout_marginLeft="1dp"
				                android:layout_gravity="center" />
				                <com.blackswan.fake.view.HandyTextView
				                    android:id="@+id/tv_distance"
				                    android:layout_width="wrap_content"
				                    android:layout_height="wrap_content"
				                    android:text="@string/distance" 
				                    android:textSize="8sp"
				                    android:layout_marginBottom="2dp"
				                    android:layout_marginLeft="40dp"
				                    android:layout_gravity="center"/>
				                <com.blackswan.fake.view.HandyTextView
				                android:id="@+id/tv_distancecount"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="0.2km"
				                android:textSize="11sp"
				                android:textColor="@color/maincolor"
				                android:layout_marginBottom="2dp"
				                android:layout_marginLeft="2dp"
				                android:layout_gravity="center" />
				                
				   </LinearLayout>
                </LinearLayout>
            </LinearLayout>
</RelativeLayout>    
