<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:padding="6dip" >

        <FrameLayout
            android:id="@+id/barber_item_layout_avatar"
            android:layout_width="77dip"
            android:layout_height="77dip"
            android:layout_marginRight="10dip" >

            <ImageView
                android:id="@+id/iv_barberavatar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bglistitem_selector_session_select"
                android:duplicateParentState="true"
                android:scaleType="fitXY" />
            

        </FrameLayout>

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/barber_item_layout_avatar"
            android:gravity="center_vertical"
            android:orientation="vertical" >
			<RelativeLayout
                    android:id="@+id/barber_item_layout_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

				<TextView
				    android:id="@+id/tv_barbername"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentLeft="true"
				    android:singleLine="true"
				    android:textColor="@color/text_color"
				    android:textSize="17sp" />
				<LinearLayout
                    android:id="@+id/user_item_layout_gender"
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_toRightOf="@+id/tv_barbername"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:background="@drawable/currentcity_rbtn" >
                <ImageView
                    android:id="@+id/iv_barbersex"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:scaleType="fitXY" />
                 <TextView
                    android:id="@+id/tv_barberage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:textColor="#fff"
                    android:textSize="12sp" />
                </LinearLayout>
               
                </RelativeLayout>

               <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tv_discontent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="简介："
                            android:textColor="@color/black3"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_barberdis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:textSize="12sp"
                            android:singleLine="true"
                            android:textColor="@color/black3" />

                    </LinearLayout>

           

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barberappraise"
                    android:textSize="11sp" />
                 <ImageView
                     android:id="@+id/iv_barberappraisestar"
                     android:layout_width="66dp"
                     android:layout_height="16dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginLeft="5dp"
                     android:src="@drawable/star50" />

                 <TextView
                     android:id="@+id/tv_barberappraise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.8分"
                     android:layout_marginLeft="10dp"
                     android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                  <TextView
                    android:id="@+id/barber_item_tv_addup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addup"
                    android:gravity="center|right"
                    android:textSize="12sp" />
                 <TextView
				       android:id="@+id/tv_barberaddup"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:text="45"
				       android:textSize="14sp"
				       android:textColor="@color/maincolor"
				       android:layout_marginBottom="2dp"
				       android:layout_marginLeft="5dp"
				       android:gravity="center"/>         
                 <TextView
                       android:id="@+id/textView2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/distance"
                       android:textSize="12sp"
                       android:layout_marginLeft="40dp" />
                 <TextView
				       android:id="@+id/tv_barberdistancecount"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:text="0.2km"
				       android:textSize="14sp"
				       android:textColor="@color/maincolor"
				       android:layout_marginBottom="2dp"
				       android:layout_marginLeft="5dp"
				       android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>